fixed some bug, optimize the framework

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 
 <body ondragstart="return false" oncontextmenu="self.event.returnValue=false">
-  <button id="restart" onclick="init_game()" >😃</button>
+  <button id="restart" onclick=" game_init()" >😃</button>
   <table id="grid"></table>
   <script src="twemoji.js"></script>
   <script src="js/game.js"></script>
   <script>
-    init_game();
+     game_init();
   </script>
 </body>
 
